<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parking">

    <Button
        android:id="@+id/button_starting_day_reservation_activity"
        style="@style/button_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_day_button_reservation_activity"
        app:layout_constraintBottom_toTopOf="@id/text_view_starting_day_reservation_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_starting_day_reservation_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:text="@string/text_view_starting_day_reservation_activity"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/button_ending_day_reservation_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_ending_day_reservation_activity"
        style="@style/button_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ending_day_button_reservation_activity"
        app:layout_constraintBottom_toTopOf="@id/text_view_ending_day_reservation_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_ending_day_reservation_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_ending_day_reservation_activity"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_number_of_parking_reservation_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:hint="@string/parking_number_input_text_reservation_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_ending_day_reservation_activity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_number_of_parking_reservation_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/parking_number_edit_text_reservation_activity"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_code_reservation_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:hint="@string/code_input_text_reservation_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text_number_of_parking_reservation_activity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_code_reservation_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/code_edit_text_reservation_activity"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/accept_button_reservation_activity"
        style="@style/button_default_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reservation_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_code_reservation_activity" />
</androidx.constraintlayout.widget.ConstraintLayout>
